# TrustVer

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SKILL.md  TRUSTVER_SPEC.md  trustver-0.1.0+hrai.pad.json  trustver.toml
.github/workflows/: ci.yml  release-binaries.yml
trustver-cli/: Cargo.toml
trustver-cli/src/: main.rs
trustver-cli/src/commands/: audit.rs  bump.rs  check_commit.rs  hook.rs  init.rs  key.rs  mod.rs  pad.rs  validate.rs
trustver-cli/tests/: audit.rs  check_commit.rs  hook.rs  init.rs  key.rs  pad.rs  validate.rs
trustver-core/: Cargo.toml
trustver-core/src/: commit.rs  config.rs  derive.rs  git.rs  key.rs  lib.rs  version.rs
trustver-core/src/pad/: attest.rs  generate.rs  mod.rs  sign.rs  validate.rs
