[package]
name = "trustver-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "trustver"
path = "src/main.rs"

[dependencies]
trustver-core = { path = "../trustver-core" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
