[package]
name = "trustver-core"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
schemapin = "1.3"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
tempfile = "3"

[dev-dependencies]
